chore: add rabbit amqp dependency in pom.xml and set up variables

--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=payment
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
