--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=auth
+spring.datasource.url=jdbc:mysql://localhost:3307/auth?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+server.port=8081
+
+api.security.token.secret=secret
