--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.application.name=delivery
-spring.datasource.url=jdbc:mysql://localhost:3307/delivery?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.application.name=order
+spring.datasource.url=jdbc:mysql://host.docker.internal:3307/order?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-
+server.port=8082
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
