--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -12,14 +12,14 @@ spring:
     gateway:
       routes:
         - id: auth-service-route
-          uri: http://localhost:8081
+          uri: http://auth-service:8081
           predicates:
             - Path=/api/auth/**
         - id: order-service-route
-          uri: http://localhost:8082
+          uri: http://order-service:8082
           predicates:
             - Path=/api/orders/**, /api/products/**, /api/product-types/**
         - id: payment-service-route
-          uri: http://localhost:8083
+          uri: http://payment-service:8083
           predicates:
             - Path=/api/payments/**
