refactor: add users route mapping in gateway

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
         - id: auth-service-route
           uri: http://auth-service:8081
           predicates:
-            - Path=/api/auth/**
+            - Path=/api/auth/**, /api/users/**
         - id: order-service-route
           uri: http://order-service:8082
           predicates:
