refactor: update jwt secret to 256-bit minimum length for Nimbus compatibility

--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 server.port=8081
 
-api.security.token.secret=secret
+api.security.token.secret=chave_grande_e_muito_segura_para_testes
