refactor: change rabbitmq host to be in order with docker compose mapping

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 server.port=8082
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
