--- a/payment/src/main/resources/application.properties
+++ b/payment/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=true
 server.port=8083
 
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
