--- a/payment/src/main/resources/application-docker.properties
+++ b/payment/src/main/resources/application-docker.properties
@@ -1,12 +1,13 @@
-spring.application.name=order
-spring.datasource.url=jdbc:mysql://host.docker.internal:3307/order?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.application.name=payment
+spring.datasource.url=jdbc:mysql://host.docker.internal:3307/payment?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=8082
+server.port=8083
+
 
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
