--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     environment:
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=docker
     networks:
       - delivery-network
 
@@ -33,6 +34,7 @@ services:
     environment:
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - rabbitmq
     networks:
@@ -46,6 +48,7 @@ services:
     environment:
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - rabbitmq
     networks:
@@ -56,6 +59,8 @@ services:
     container_name: gateway
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - auth-service
       - order-service
