--- a/auth/src/main/resources/application-docker.properties
+++ b/auth/src/main/resources/application-docker.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql=true
 server.port=8081
 
 api.security.token.secret=chave_grande_e_muito_segura_para_testes
+api.security.admin.password=password
