--- a/order/src/main/resources/application-dev.properties
+++ b/order/src/main/resources/application-dev.properties
@@ -12,3 +12,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 spring.rabbitmq.password=password
+
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.initial-interval=2000ms
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
